Fixed some links

--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -39,7 +39,8 @@
         <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="email" name="email" class="form-control" required value="{{form.email.value|default:''}}">
-		 {# TODO: Не має перевірки: на те що такий мейл вже використаний, або на те, що поле не може бути пустим #}
+		 {# TODO: Не має перевірки на дублыкат Е-мейл в БД #}
+		 {# TODO: Не має перевірки: на пусте поле #}
 		 <span class="validation-message">Не коректний мейл</span>
         </div>
        </div>
@@ -47,7 +48,10 @@
         <label class="col-sm-4 control-label">Nickname <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="username" class="form-control" required value="{{form.username.value|default:''}}">
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в логіні 5шт.;  максимальна 15шт.; на дублікат логуну, бо можливо такий логін вже існує в БД, або на те, що поле не може бути пустим #}
+		 {# TODO: Не має перевірки: на пусте поле #}
+		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 5шт. #}
+		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 15шт. #}
+		 {# TODO: Не має перевірки: на пусте поле #}
 		 <span class="validation-message">Не коректний логін</span>
         </div>
        </div>
@@ -55,8 +59,10 @@
         <label class="col-sm-4 control-label">First Name <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="first_name" class="form-control" required value="{{form.first_name.value|default:''}}">
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт.;  максимальна 20шт.; на те, що поле не може бути пустим #}
-		 {# TODO: Імя - не можуть містити знаків (наприклад "№;%@/./) #}
+		 {# TODO: Не має перевірки: на пусте поле #}
+		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
+		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
+		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
 		 <span class="validation-message">Не коректне поле</span>
         </div>
        </div>
@@ -64,8 +70,10 @@
         <label class="col-sm-4 control-label">Last Name <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="last_name" class="form-control" required value="{{form.last_name.value|default:''}}">
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт.;  максимальна 20шт.; на те, що поле не може бути пустим #}
-		 {# TODO: Прізвище - не можуть містити знаків (наприклад "№;%@/./) #}
+		 {# TODO: Не має перевірки: на пусте поле #}
+		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
+		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
+		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
 		 <span class="validation-message">Не коректне поле</span>
         </div>
        </div>
@@ -73,15 +81,21 @@
         <label class="col-sm-4 control-label">Your country <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="country" class="form-control" required value="{{form.country.value|default:''}}">
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт.;  максимальна 20шт.; на те, що поле не може бути пустим #}
-		 {# TODO: Країна - не можуть містити знаків (наприклад "№;%@/./) #}
+		 {# TODO: Не має перевірки: на пусте поле #}
+		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
+		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
+		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
 		 <span class="validation-message">Не коректне поле</span>
         </div>
        </div>
        <div class="form-group {% if form.phone.errors %} has-error {% endif %}" title="{{form.phone.errors|striptags}}">
         <label class="col-sm-4 control-label">Your phone <span class="require">*</span></label>
         <div class="col-sm-8">
-		 {# TODO: Телефон - не можуть містити знаків (наприклад "№;%@/./), крім знаків, які може містити тільки: +(); на те, що поле не може бути пустим #}
+		 {# TODO: Не має перевірки: на пусте поле #}
+		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
+		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
+		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
+		 {# TODO: Поле Телефон може містити тільки цифри та знаки +() #}
          <input type="tel" name="phone" class="form-control" required value="{{form.phone.value|default:''}}">
 		 <span class="validation-message">Не коректне поле</span>
         </div>
@@ -118,11 +132,8 @@
 {% endblock %}
 
 
-
-
 {% comment %}
 	Якщо коротко то:
-	1.  Проблема з кожний полем.  Кожне поле містить дефекти в перевірці. Чи то на кількість знаків, чи то на допустимі знаки.
 	2. Поле пароль1 та пароль2 не перевіряє на індентичність
 	3. Не має перевірки на обов'язковість полів
 	4. Не має перевірки на Логін та Е-мейл чи такі вже є в БД.
@@ -130,12 +141,10 @@
 	5. На пошту не приходить Е-мейл про реєстрацію.
 	6. Після реєстрації, користувач має автоматично авторизовуватися на сайті, а одразу перенаправлятися на сторінку My orders (url: my-orders) 
 	
-	
 пункт 2, 3 звідки взяв :)
 точніше 3, 4
 
-
-2 - перевірив. в полі пароль1 вказав один пароль, а полі пароль2 вказав інший пароль, і система мене зареєструвала.
-3 - Догадка, так як перевірка форми є лише на фронтендному рівні, а на бекендному я не протестував, але написав так щоб ти додатково перевірив і якщо це так то добавив таку перевірку на бекенді.
-4 - Я два рази зміг зареєструватися з різними логінами на один і той же е-мейл. Мала би бути перевірка в полі е-мейл на ідентичність в БД.
+	2 - перевірив. в полі пароль1 вказав один пароль, а полі пароль2 вказав інший пароль, і система мене зареєструвала.
+	3 - Догадка, так як перевірка форми є лише на фронтендному рівні, а на бекендному я не протестував, але написав так щоб ти додатково перевірив і якщо це так то добавив таку перевірку на бекенді.
+	4 - Я два рази зміг зареєструватися з різними логінами на один і той же е-мейл. Мала би бути перевірка в полі е-мейл на ідентичність в БД.
 {% endcomment %}
