--- a/templates/html/header.html
+++ b/templates/html/header.html
@@ -1,57 +1,55 @@
-  <section id="pre-header">
-     <div class="container">
-          <div class="row">
-              <!-- BEGIN TOP BAR LEFT PART -->
-              <div class="col-md-6 col-sm-6 additional-info">
-                  <ul>
-                      <li><i class="fa fa-phone"></i><span>+1 907 331 4392</span></li>
-                      <li><i class="fa fa-envelope-o"></i><span>info@mywriters.com</span></li>
-                  </ul>
-              </div>
-              <!-- END TOP BAR LEFT PART -->
-              <!-- BEGIN TOP BAR MENU -->
-              <div class="col-md-6 col-sm-6 additional-nav">
-        <ul class="pull-right">
-          {% if request.user.is_authenticated %}
-            <li><a href="my-orders">My Orders</a></li>
-            <li><a href="{% url 'logout' %}">Exit</a></li>
-          {% else %}
-            <li><a href="{% url 'login' %}">Log In</a></li>
-            <li><a href="registration">Registration</a></li>
-          {% endif %}
-        </ul>
+<section id="pre-header">
+ <div class="container">
+	  <div class="row">
+		  <!-- BEGIN TOP BAR LEFT PART -->
+		  <div class="col-md-6 col-sm-6 additional-info">
+			  <ul>
+				  <li><i class="fa fa-phone"></i><span>+1 907 331 4392</span></li>
+				  <li><i class="fa fa-envelope-o"></i><span>info@mywriters.com</span></li>
+			  </ul>
+		  </div>
+		  <!-- END TOP BAR LEFT PART -->
+		  <!-- BEGIN TOP BAR MENU -->
+		  <div class="col-md-6 col-sm-6 additional-nav">
+			<ul class="pull-right">
+			  {% if request.user.is_authenticated %}
+				<li><a href="my-orders{% url 'my-orders' %}">My Orders</a></li>
+				<li><a href="{% url 'logout' %}">Exit</a></li>
+			  {% else %}
+				<li><a href="{% url 'login' %}">Log In</a></li>
+				<li><a href="{% url 'registration' %}">Registration</a></li>
+			  {% endif %}
+			</ul>
 
-              </div>
-              <!-- END TOP BAR MENU -->
-          </div>
-      </div>        
-  </section><!--pre-header-->
+		  </div>
+		  <!-- END TOP BAR MENU -->
+	  </div>
+  </div>        
+</section><!--pre-header-->
 
-  <header id="header">
-     <div class="container">
-       <div id="logo"><a href="/"><img src="{{ STATIC_URL }}images/demo/logo.png"></a></div>
+<header id="header">
+ <div class="container">
+   <div id="logo"><a href="{% url 'home' %}"><img src="{{ STATIC_URL }}images/demo/logo.png"></a></div>
 
-       <a href="javascript:void(0);" class="mobi-toggler"></a>
+   <a href="javascript:void(0);" class="mobi-toggler"></a>
 
-       <!-- BEGIN NAVIGATION -->
-       <div id="main-navigation" class="pull-right">
-        <ul>
-         <li class="active"><a href="/">Home</a></li>
-         
-      <li class="dropdown">
-       <a href="#">Our Services</a>
-       <ul class="dropdown-menu">
-        <li class="active"><a href="service">Services</a></li>
-        <li><a href="service">Prices</a></li>
-       </ul>
-      </li>
-         <li><a href="pricing">Pricing</a></li>
-      <li><a href="guarantees">Guarantees</a></li>
-         <li><a href="guarantees">Our writers</a></li>
-         <li><a href="faq">FAQ</a></li>
-      <li><a href="contacts">Contact</a></li>
-        </ul>
-       </div>
-       <!-- END NAVIGATION -->
-     </div>
-    </header><!--header-->
+   <!-- BEGIN NAVIGATION -->
+   <div id="main-navigation" class="pull-right">
+	<ul>
+		<li class="active"><a href="{% url 'home' %}">Home</a></li>
+		<li class="dropdown">
+			<a href="#">Our Services</a>
+			<ul class="dropdown-menu">
+				<li class="active"><a href="{% url 'service' %}">Services</a></li>
+				<li><a href="{% url 'service' %}">Prices</a></li>
+			</ul>
+		</li>
+		<li><a href="{% url 'pricing' %}">Pricing</a></li>
+		<li><a href="{% url 'guarantees' %}">Guarantees</a></li>
+		<li><a href="{% url 'faq' %}">FAQ</a></li>
+		<li><a href="{% url 'contact' %}">Contact</a></li>
+	</ul>
+   </div>
+   <!-- END NAVIGATION -->
+ </div>
+</header><!--header-->
