Added static pages

--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -26,7 +26,7 @@
   <div id="copyright">
     <div class="container">
      <div class="row">
-      <div class="col-md-6 col-sm-12">Copyright © 2013-2014 name.com All Rights Reserved | <a href="#">name.com</a></div>
+      <div class="col-md-6 col-sm-12">Copyright © 2013-2014 essatcoffee.com All Rights Reserved | <a href="#">essatcoffee.com</a></div>
       <div class="col-md-6 col-sm-12 text-right">
        <span>We accept:</span>
        <ul class="merchants">
