--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -12,8 +12,8 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
     <ul class="list-group">
-      <li class="list-group-item active"><a href="{% url 'login' %}">Log In</a></li>
-      <li class="list-group-item"><a href="{% url 'registration' %}">Registration</a></li>
+      <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
+      <li class="list-group-item active"><a href="{% url 'registration' %}">Registration</a></li>
       <li class="list-group-item"><a href="{% url 'forgot' %}">Restore Password</a></li>
     </ul>
   </section>
