--- a/templates/html/sidebar-left.html
+++ b/templates/html/sidebar-left.html
@@ -1,11 +1,82 @@
-<!-- BEGIN RIGHT SIDEBAR LAYOUT -->
-<div id="layout-right" class="col-md-3 col-sm-12">
-	<section class="sibebar-section">
-		<ul class="list-group">
-			<li class="list-group-item active"><a href="login">Log In</a></li>
-			<li class="list-group-item"><a href="registration">Registration</a></li>
-			<li class="list-group-item"><a href="forgot">Restore Password</a></li>
-		</ul>
-	</section>
-</div>
-<!-- END RIGHT SIDEBAR LAYOUT -->
+<section class="sibebar-section">
+	<h3>Best Prices!</h3>
+	<ul class="price-list">
+		<li>
+			<span class="tariff-descr">High School:</span>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">10</span></span>/page</div>
+		</li>
+
+		<li>
+			<span class="tariff-descr">College:</span>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">13</span></span>/page</div>
+		</li>
+
+		<li>
+			<span class="tariff-descr">University:</span>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">14</span></span>/page</div>
+		</li>
+
+		<li>
+			<span class="tariff-descr">Master's:</span>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">20</span></span>/page</div>
+		</li>
+
+		<li>
+			<span class="tariff-descr">Ph. D.:</span>
+			<div class="tag-bg"><span class="currency">$<span class="price-numb">25</span></span>/page</div>
+		</li>
+	</ul>
+	<a href="{% url 'pricing' %}" class="btn-transparent btn-grey">Full Price Table</a>
+</section>
+
+<section class="sibebar-section">
+	<div class="sibebar-banner">
+		<img src="{{ STATIC_URL }}images/demo/banner.jpg" alt="">
+		<div class="banner-title">Buy Custom Essay</div>
+		<a href="{% url 'new-order' %}" class="btn btn-primary">Order Now</a>
+	</div>
+</section>
+
+<section class="sibebar-section">
+	<h3>Our Benefits</h3>
+	<ul class="benefits-list">
+		<li><i class="icon-timer box-icon-small"></i><span>Quick Delivery</span></li>
+		<li><i class="icon-arrow box-icon-small"></i><span>100% Money Back</span></li>
+		<li><i class="icon-livechat box-icon-small"></i><span>24/7 Live Support</span></li>
+		<li><i class="icon-tag box-icon-small"></i><span>Affordable Price</span></li>
+	</ul>
+</section>
+
+<section class="sibebar-section">
+	<!-- BEGIN SOCIAL SHARE BUTTONS -->
+	<div class="social-share">
+		<!-- Google Plus Button -->
+		<div class="g-plusone" data-size="medium" data-href="http://54.191.44.155"></div>
+		<script type="text/javascript">
+		  (function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/platform.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		</script>
+		<!-- end Google Plus Button -->
+
+		<!-- Twitter Button -->
+		<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://genttech.com/my">Tweet</a>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+		<!-- end Twitter Button -->
+
+		<!-- Facebook Button -->
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=387897624670260&version=v2.0";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
+		<div class="fb-like" data-href="http://54.191.44.155" data-width="100" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+		<!-- end Facebook Button -->
+	</div>
+	<!-- END SOCIAL SHARE BUTTONS -->
+</section>
