--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -2,9 +2,9 @@
 
 {% block breadcrump %}
 <div class="breadcrumbs">
-	<a href="{% url 'home' %}">Home</a>
-	<span class="separator"><i class="fa fa-angle-right"></i></span>
-	<a href="{% url 'registration' %}" class="active">Registration</a>
+  <a href="{% url 'home' %}">Home</a>
+  <span class="separator"><i class="fa fa-angle-right"></i></span>
+  <a href="{% url 'registration' %}" class="active">Registration</a>
 </div>
 {% endblock %}
 
@@ -27,7 +27,6 @@
     <div class="col-md-8 col-sm-8">
      <form action="{% url 'registration' %}" method="post" id="registration-form" class="form-horizontal">
        {% csrf_token %}
-       
       <fieldset>
        <legend>Your personal details</legend>
        {% if form.non_field_errors %}
@@ -39,65 +38,42 @@
         <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="email" name="email" class="form-control" required value="{{form.email.value|default:''}}">
-		 {# TODO: Не має перевірки на дублыкат Е-мейл в БД #}
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 <span class="validation-message">Не коректний мейл</span>
+         {% if form.email.errors %}<span class="validation-message">{{form.email.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.username.errors %} has-error {% endif %}" title="{{form.username.errors|striptags}}">
         <label class="col-sm-4 control-label">Nickname <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="username" class="form-control" required value="{{form.username.value|default:''}}">
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 5шт. #}
-		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 15шт. #}
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 <span class="validation-message">Не коректний логін</span>
+         {% if form.username.errors %}<span class="validation-message">{{form.username.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.first_name.errors %} has-error {% endif %}" title="{{form.first_name.errors|striptags}}">
         <label class="col-sm-4 control-label">First Name <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="first_name" class="form-control" required value="{{form.first_name.value|default:''}}">
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
-		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
-		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
-		 <span class="validation-message">Не коректне поле</span>
+         {% if form.first_name.errors %}<span class="validation-message">{{form.first_name.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.last_name.errors %} has-error {% endif %}" title="{{form.last_name.errors|striptags}}">
         <label class="col-sm-4 control-label">Last Name <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="last_name" class="form-control" required value="{{form.last_name.value|default:''}}">
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
-		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
-		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
-		 <span class="validation-message">Не коректне поле</span>
+         {% if form.last_name.errors %}<span class="validation-message">{{form.last_name.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.country.errors %} has-error {% endif %}" title="{{form.country.errors|striptags}}">
         <label class="col-sm-4 control-label">Your country <span class="require">*</span></label>
         <div class="col-sm-8">
          <input type="text" name="country" class="form-control" required value="{{form.country.value|default:''}}">
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
-		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
-		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
-		 <span class="validation-message">Не коректне поле</span>
+         {% if form.country.errors %}<span class="validation-message">{{form.country.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.phone.errors %} has-error {% endif %}" title="{{form.phone.errors|striptags}}">
         <label class="col-sm-4 control-label">Your phone <span class="require">*</span></label>
         <div class="col-sm-8">
-		 {# TODO: Не має перевірки: на пусте поле #}
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 3шт. #}
-		 {# TODO: Не має перевірки: максимальну к-ть знаків в полі 20шт. #}
-		 {# TODO: Не має перевірки: на містимість заборонених знаків (наприклад "№;%@/./) #}
-		 {# TODO: Поле Телефон може містити тільки цифри та знаки +() #}
          <input type="tel" name="phone" class="form-control" required value="{{form.phone.value|default:''}}">
-		 <span class="validation-message">Не коректне поле</span>
+         {% if form.phone.errors %}<span class="validation-message">{{form.phone.errors|striptags}}</span>{% endif %}
         </div>
        </div>
       </fieldset>
@@ -106,16 +82,15 @@
        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
         <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="password" name="password" required class="form-control">
+         <input type="password" name="password" required class="form-control" value="{{form.password.value|default:''}}">
+         {% if form.password.errors %}<span class="validation-message">{{form.password.errors|striptags}}</span>{% endif %}
         </div>
        </div>
        <div class="form-group {% if form.password.errors %} has-error {% endif %}">
         <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
         <div class="col-sm-8">
-         <input type="password" name="password2" required class="form-control">
-		 {# TODO: Не має перевірки на схожість першого та другого пароля (field name: password and password2)#}
-		 {# TODO: Не має перевірки: мінімальна к-ть знаків в полі 4шт.;  максимальна 20шт.; не має перевірки та те що поле 1 чи два не можу бути пустим #}
-		 <span class="validation-message">Не коректне поле</span>
+         <input type="password" name="password2" required class="form-control" value="{{form.password2.value|default:''}}">
+         {% if form.password2.errors %}<span class="validation-message">{{form.password2.errors|striptags}}</span>{% endif %}
         </div>
        </div>
       </fieldset>
@@ -133,18 +108,5 @@
 
 
 {% comment %}
-	Якщо коротко то:
-	2. Поле пароль1 та пароль2 не перевіряє на індентичність
-	3. Не має перевірки на обов'язковість полів
-	4. Не має перевірки на Логін та Е-мейл чи такі вже є в БД.
-
-	5. На пошту не приходить Е-мейл про реєстрацію.
-	6. Після реєстрації, користувач має автоматично авторизовуватися на сайті, а одразу перенаправлятися на сторінку My orders (url: my-orders) 
-	
-пункт 2, 3 звідки взяв :)
-точніше 3, 4
-
-	2 - перевірив. в полі пароль1 вказав один пароль, а полі пароль2 вказав інший пароль, і система мене зареєструвала.
-	3 - Догадка, так як перевірка форми є лише на фронтендному рівні, а на бекендному я не протестував, але написав так щоб ти додатково перевірив і якщо це так то добавив таку перевірку на бекенді.
-	4 - Я два рази зміг зареєструватися з різними логінами на один і той же е-мейл. Мала би бути перевірка в полі е-мейл на ідентичність в БД.
+ 5. TODO. На пошту не приходить Е-мейл про реєстрацію. 
 {% endcomment %}
