--- a/templates/userprofile/registration.html
+++ b/templates/userprofile/registration.html
@@ -4,7 +4,7 @@
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
   <span class="separator"><i class="fa fa-angle-right"></i></span>
-  <a href="{% url 'registration' %}" class="active">Registration</a>
+  <a href="{% url 'user_edit' request.user.pk %}" class="active">Account</a>
 </div>
 {% endblock %}
 
@@ -12,8 +12,7 @@
 <div id="layout-right" class="col-md-3 col-sm-12">
   <section class="sibebar-section">
     <ul class="list-group">
-      <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-      <li class="list-group-item active"><a href="{% url 'registration' %}">Registration</a></li>
+      <li class="list-group-item"><a href="{% url 'my-orders' %}">My orders</a></li>
       <li class="list-group-item"><a href="{% url 'forgot' %}">Restore Password</a></li>
     </ul>
   </section>
@@ -23,9 +22,9 @@
 {% block content %}
    <!-- BEGIN MIDDLE LAYOUT -->
    <div id="layout-middle" class="col-md-9 col-sm-9">
-    <h1 class="page-title">Create an account</h1>
+    <h1 class="page-title">Update an account</h1>
     <div class="col-md-8 col-sm-8">
-     <form action="{% url 'registration' %}" method="post" id="registration-form" class="form-horizontal">
+     <form action="{% url 'user_edit' request.user.pk %}" method="post" id="registration-form" class="form-horizontal">
        {% csrf_token %}
       <fieldset>
        <legend>Your personal details</legend>
@@ -77,27 +76,10 @@
         </div>
        </div>
       </fieldset>
-      <fieldset>
-       <legend>Your password</legend>
-       <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-        <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
-        <div class="col-sm-8">
-         <input type="password" name="password" required class="form-control" value="{{form.password.value|default:''}}">
-         {% if form.password.errors %}<span class="validation-message">{{form.password.errors|striptags}}</span>{% endif %}
-        </div>
-       </div>
-       <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-        <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
-        <div class="col-sm-8">
-         <input type="password" name="password2" required class="form-control" value="{{form.password2.value|default:''}}">
-         {% if form.password2.errors %}<span class="validation-message">{{form.password2.errors|striptags}}</span>{% endif %}
-        </div>
-       </div>
-      </fieldset>
       <div class="form-group submit-group">
        <label class="col-sm-4 control-label">&nbsp;</label>
        <div class="col-sm-8">
-         <button type="submit" class="btn btn-primary">Create an account</button>
+         <button type="submit" class="btn btn-primary">Update an account</button>
        </div>
       </div>
      </form>
@@ -105,9 +87,3 @@
    </div>
    <!-- END MIDDLE LAYOUT -->
 {% endblock %}
-
-
-{% comment %}
- 5. TODO. На пошту не приходить Е-мейл про реєстрацію.
- 6. TODO. Add phone regexp.
-{% endcomment %}
