--- a/templates/html/main.html
+++ b/templates/html/main.html
@@ -73,7 +73,7 @@
     <div class="container">
      <div class="row">
       <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
-      <div class="col-md-3 text-right"><a href="order" class="btn-transparent">Order Now</a></div>
+      <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
    </section>
@@ -126,7 +126,7 @@
     <div class="container">
      <div class="row">
       <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
-      <div class="col-md-3 text-right"><a href="order" class="btn-transparent">Order Now</a></div>
+      <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
    </section>
@@ -161,7 +161,7 @@
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
          <span>Per Month</span>
-         <a href="order" class="btn-grey-bg">Order Now</a>
+         <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
         
        </div><!--col-tariff-->
@@ -182,7 +182,7 @@
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
          <span>Per Month</span>
-         <a href="order" class="btn-grey-bg">Order Now</a>
+         <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
 
@@ -202,7 +202,7 @@
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
          <span>Per Month</span>
-         <a href="order" class="btn-grey-bg">Order Now</a>
+         <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
 
@@ -222,7 +222,7 @@
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
          <span>Per Month</span>
-         <a href="order" class="btn-grey-bg">Order Now</a>
+         <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
 
@@ -242,12 +242,12 @@
         <div class="tafiff-price">
          $<span class="text-large">0</span><span class="text-small">.00</span>
          <span>Per Month</span>
-         <a href="order" class="btn-grey-bg">Order Now</a>
+         <a href="{% url 'new-order' %}" class="btn-grey-bg">Order Now</a>
         </div>
        </div><!--col-tariff-->
       </div>
      </div>
-     <div class="row text-center full-price-wrapper"><a href="pricing" class="btn-transparent btn-grey">Full Price Table</a></div>
+     <div class="row text-center full-price-wrapper"><a href="{% url 'pricing' %}" class="btn-transparent btn-grey">Full Price Table</a></div>
     </div>
    </section>
    <!-- END TARIFFS BOX -->
@@ -304,7 +304,7 @@
     <div class="container">
      <div class="row ">
       <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
-      <div class="col-md-3 text-right"><a href="order" class="btn-transparent">Order Now</a></div>
+      <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div>
     </div>
    </section>
@@ -347,7 +347,7 @@
     <div class="container">
      <div class="row">
       <div class="col-md-9"><span>Metronic - The Most Complete &amp; Popular Admin &amp; Frontend Theme</span></div>
-      <div class="col-md-3 text-right"><a href="order" class="btn-transparent">Order Now</a></div>
+      <div class="col-md-3 text-right"><a href="{% url 'new-order' %}" class="btn-transparent">Order Now</a></div>
      </div> 
     </div>
    </section>
