--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@
             <div class="row">
       {% endblock %}
       {% block sidebar_right %}{% endblock %}
+	  {% block sidebar_account %}{% endblock %}
       {% block content %}
           {% include 'html/main.html' %}
       {% endblock %}
