--- a/static/css/style.css
+++ b/static/css/style.css
@@ -257,6 +257,20 @@ blockquote{
 	margin-top: 10px;
 	margin-left: 3px;
 }
+
+.nav-tabs.margin3035350{
+	margin-top: 30px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 0px;
+}
+.nav-tabs.margin10353530{
+	margin-top: 10px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-bottom: 30px;
+}
+
 .nav-tabs > li{
 	margin-bottom: 0;
 }
@@ -561,14 +575,21 @@ h3.page-title + .panel-group{
 .radio-inline-list .radio-inline + .radio-inline{
 	margin-left: 0;
 	padding-top: 10px;
+	display: block;
 }
 .content-page .form-horizontal.new-order-form-wrapper p{
 	margin-bottom: 9px;
 	padding-top: 5px;
 }
+.content-page .form-horizontal.new-order-form-wrapper p a{
+	color: #e84d1c;
+}
 .form-horizontal.new-order-form-wrapper .col-sm-5.control-label + .col-sm-5.control-label{
-	padding-top: 9px;
+	padding-top: 1px;
 	padding-bottom: 13px;
+	font-size: 20px;
+	font-weight: bold;
+	color: #e84d1c;	
 }
 .form-horizontal .radio, 
 .form-horizontal .checkbox{
@@ -2462,7 +2483,6 @@ h4.panel-title{
 }
 .price-form{
 	border: 1px solid #ddd;
-	border-top: 4px solid #ffb841;
 	padding: 20px 0 0;
 }
 @media (max-width: 768px) {
@@ -2471,11 +2491,11 @@ h4.panel-title{
 	}	
 }
 .price-form .form-group{
-	margin-bottom: 6px;
+	margin-bottom: 15px; /*6px;*/
 }
 .price-form .form-group.total{
 	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 .price-form .submit-group{
 	margin-top: 27px;
