--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -27,7 +27,7 @@
   <form action="{% url "login" %}" method="post" class="form-horizontal form-without-legend auth-form">
    {% csrf_token %}
    <div class="form-group {% if form.errors %}has-error{% endif %}">
-    <label class="col-sm-4 control-label">Username <span class="require">*</span></label>
+    <label class="col-sm-4 control-label">Login <span class="require">*</span></label>
     <div class="col-sm-8">
      <input type="text" name="username" class="form-control" required>
     </div>
