--- a/templates/pages/my-account.html
+++ b/templates/pages/my-account.html
@@ -4,36 +4,34 @@
 <div class="breadcrumbs">
   <a href="{% url 'home' %}">Home</a>
   <span class="separator"><i class="fa fa-angle-right"></i></span>
-  <a href="{% url 'registration' %}" class="active">Registration</a>
+  <a href="{% url 'my-account' %}" class="active">My account</a>
 </div>
 {% endblock %}
 
-{% block sidebar_right %}
+{% block sidebar_account %}
+<!-- BEGIN RIGHT SIDEBAR LAYOUT -->
 <div id="layout-right" class="col-md-3 col-sm-12">
-  <section class="sibebar-section">
-    <ul class="list-group">
-      <li class="list-group-item"><a href="{% url 'login' %}">Log In</a></li>
-      <li class="list-group-item active"><a href="{% url 'registration' %}">Registration</a></li>
-      <li class="list-group-item"><a href="{% url 'forgot' %}">Restore Password</a></li>
-    </ul>
-  </section>
+	<section class="sibebar-section">
+		<ul class="list-group">
+			<li class="list-group-item"><a href="{% url 'my-orders' %}">My Orders</a></li>
+			<li class="list-group-item active"><a href="{% url 'my-account' %}">My account</a></li>
+			<li class="list-group-item"><a href="{% url 'password-change' %}">Password change</a></li>
+			<li class="list-group-item"><a href="{% url 'logout' %}">Exit</a></li>
+		</ul>
+	</section>
 </div>
+<!-- END RIGHT SIDEBAR LAYOUT -->
 {% endblock %}
 
 {% block content %}
    <!-- BEGIN MIDDLE LAYOUT -->
    <div id="layout-middle" class="col-md-9 col-sm-9">
-    <h1 class="page-title">Create an account</h1>
+    <h1 class="page-title">My account</h1>
     <div class="col-md-8 col-sm-8">
-     <form action="{% url 'registration' %}" method="post" id="registration-form" class="form-horizontal">
+     <form action="{% url 'my-account' %}" method="post" id="registration-form" class="form-horizontal">
        {% csrf_token %}
       <fieldset>
        <legend>Your personal details</legend>
-       {% if form.non_field_errors %}
-          {% for error in form.non_field_errors %}
-            <span class="validation-message">{{error|striptags}}</span>
-          {% endfor %}
-       {% endif %}
        <div class="form-group {% if form.email.errors %} has-error {% endif %}" title="{{form.email.errors|striptags}}">
         <label class="col-sm-4 control-label">Email <span class="require">*</span></label>
         <div class="col-sm-8">
@@ -41,14 +39,14 @@
          {% if form.email.errors %}<span class="validation-message">{{form.email.errors|striptags}}</span>{% endif %}
         </div>
        </div>
+	   
        <div class="form-group {% if form.username.errors %} has-error {% endif %}" title="{{form.username.errors|striptags}}">
-        <label class="col-sm-4 control-label">Login <span class="require">*</span></label>
+        <label class="col-sm-4 control-label">Login </label>
         <div class="col-sm-8">
-         <input type="text" name="username" class="form-control" required value="{{form.username.value|default:''}}">
-		 {# TODO: мінімальна кількість символів 4 шт. та не може містити знаків #}
-         {% if form.username.errors %}<span class="validation-message">{{form.username.errors|striptags}}</span>{% endif %}
-        </div>
+		 <input class="form-control" disabled value="Nickname">
+		</div>
        </div>
+	   
        <div class="form-group {% if form.first_name.errors %} has-error {% endif %}" title="{{form.first_name.errors|striptags}}">
         <label class="col-sm-4 control-label">First Name <span class="require">*</span></label>
         <div class="col-sm-8">
@@ -82,27 +80,10 @@
         </div>
        </div>
       </fieldset>
-      <fieldset>
-       <legend>Your password</legend>
-       <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-        <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
-        <div class="col-sm-8">
-         <input type="password" name="password" required class="form-control" value="{{form.password.value|default:''}}">
-        </div>
-       </div>
-       <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-        <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
-        <div class="col-sm-8">
-         <input type="password" name="password2" required class="form-control" value="{{form.password2.value|default:''}}">
-		 {# TODO: Перевірки на к-ть символів (мін. 4 символів) #}
-         {% if form.password.errors %}<span class="validation-message">{{form.password.errors|striptags}}</span>{% endif %}
-        </div>
-       </div>
-      </fieldset>
       <div class="form-group submit-group">
        <label class="col-sm-4 control-label">&nbsp;</label>
        <div class="col-sm-8">
-         <button type="submit" class="btn btn-primary">Create an account</button>
+         <button type="submit" class="btn btn-primary">Updates</button>
        </div>
       </div>
      </form>
@@ -110,9 +91,3 @@
    </div>
    <!-- END MIDDLE LAYOUT -->
 {% endblock %}
-
-
-{% comment %}
- 5. TODO. На пошту не приходить Е-мейл про реєстрацію.
- 6. TODO. Add phone regexp.
-{% endcomment %}
